--- a/result2.html
+++ b/result2.html
@@ -57,7 +57,7 @@
 
 <div class="result-container">
     <h1>Prediction Result</h1>
-    <p>Your crop prediction is: <strong>{{ prediction1 }}</strong></p>
+    <p>Your soil prediction is: <strong>{{ prediction1 }}</strong></p>
     <a href="{{ url_for('soil_prediction') }}">Back to Prediction Form</a>
     <a href="{{ url_for('index') }}">Back to Dashboard</a>
 </div>
